--- a/TW/TW_Engine/TW_Engine.vcxproj.filters
+++ b/TW/TW_Engine/TW_Engine.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="TW_paDIC.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TW_paDIC_FFTCC2D_CPU.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TW_utils.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TW_paDIC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TW_paDIC_FFTCC2D_CPU.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
