--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj.filters
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="icgnTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FFTCC+ICGN.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="GPUThrust.cu">
