Small bug fixed
git-tfs-id: [https://twang006.visualstudio.com/]$/TW;C225

--- a/TW/TW_EngineTester/TW_EngineTester.vcxproj
+++ b/TW/TW_EngineTester/TW_EngineTester.vcxproj
@@ -155,6 +155,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ClockTests.cpp" />
+    <ClCompile Include="FFTCC+ICGN.cpp" />
     <ClCompile Include="FftccTest.cpp" />
     <ClCompile Include="GPUutils_test.cpp" />
     <ClCompile Include="gtest-all.cpp" />
