--- a/TW/TW_Core/TW_Core.vcxproj.filters
+++ b/TW/TW_Core/TW_Core.vcxproj.filters
@@ -36,6 +36,11 @@
     <Filter Include="CUDA">
       <UniqueIdentifier>{bf114a11-7d9f-4291-8e7c-d76abec01ae7}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Translation Files">
+      <UniqueIdentifier>{639EADAA-A684-42e4-A9AD-28FC9BCB8F7C}</UniqueIdentifier>
+      <Extensions>ts</Extensions>
+      <ParseFiles>false</ParseFiles>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -211,5 +216,8 @@
   <ItemGroup>
     <None Include="frag.glsl" />
     <None Include="vert.glsl" />
+    <None Include="tw_core_zh.ts">
+      <Filter>Translation Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
